--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -61,7 +61,15 @@
  *
  * ------------------------------------------------------------------- */
 
- 
+ .post-thumb{
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 1;
+  transition: opacity .17s ease;
+ }
  .s-footer__subscribe #newletter-form input[type="email"] {
   width: 100%;
   height: 5.4rem;
